# portfolio

./: .gitignore  CV.yaml  Cargo.toml  README.md  Trunk.toml  gatsby-config.js  index.html  justfile  leptosfmt.toml  package-lock.json  package.json  robots.txt  rustfmt.toml  sitemap.xml  tailwind.config.js
.github/workflows/: check.yml
archive/2022/: package-lock.json  package.json
archive/2022/src/components/: Footer.jsx  Head.jsx
archive/2022/src/components/projects/: projects.js
archive/2022/src/pages/: index.js
archive/2022/src/styles/: global.css
archive/2022/src/styles/abstracts/: _globalVariables.scss  _index.scss
archive/2022/src/styles/components/: _hover_link.scss  footer.css  footer.scss  socialLinks.css  topbar.css  topbar.scss
archive/2022/src/styles/core/: _reset.scss
archive/2022/src/styles/sections/: _contact.scss  _projects.scss
archive/2022/src/utils/: animations.js
public/: sitemap.xml
src/: app.rs  main.rs  utils.rs
src/components/: ContactForm.js  Footer.jsx  Head.jsx  Layout.js  Layout.jsx  SocialLinks.js  SocialLinks.jsx  Topbar.js  external_link.rs  mod.rs  tag.rs  theme_toggle.rs
src/components/experience/: ExperienceObject.js  ExperienceSection.js  ExperienceSection.jsx  experience.js
src/components/projects/: ProjectObject.js  ProjectsSection.js  ProjectsSection.jsx  projects.js
src/pages/: 404.js  index.js
src/sections/: contact.rs  contributions.rs  experience.rs  footer.rs  mod.rs  nav.rs  projects.rs  section.rs
src/styles/: global.css  global.scss
src/styles/abstracts/: _animations.scss  _globalVariables.scss  _mediaQueries.scss
src/styles/components/: _button.scss  footer.css  footer.scss  socialLinks.scss  topbar.css  topbar.scss
src/styles/core/: _base.scss  _index.scss  _typography.scss
src/styles/sections/: _contact.scss  _experience.scss  _index.scss  _intro.scss
src/utils/: animations.js
style/: style.css  tailwind.css
