[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
icondata = "0.6"
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_darkmode = { version = "0.4" }
leptos_icons = "0.7"
leptos_meta = { version = "0.8" }
leptos-use = { version = "0.16", default-features = false, features = [
  "use_intersection_observer",
] }
reqwasm = "0.5"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0"
wasm-bindgen = "0.2"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
lib-profile-release = "wasm-release"
